Closed Bug 1579874 Opened 5 years ago Closed 5 years ago

SocketProcess misidentified as Content Process in crash reports

Categories

(Core :: Networking, defect, P2)

x86_64
All
defect

Tracking

()

RESOLVED FIXED
mozilla71
Tracking Status
firefox71 --- fixed

People

(Reporter: gcp, Assigned: kershaw)

References

Details

(Whiteboard: [necko-triaged])

Attachments

(1 file)

From Bug 1579800 - Crash in [@ mozilla::ipc::CrashReporterClient::InitSingleton<T>]

Crash signature:
https://crash-stats.mozilla.org/report/index/4e06d931-55b5-489f-87b7-4a46a0190908

Notice that the process is described as:
Process Type content (web)

Even though the crash is in:
bool mozilla::net::SocketProcessChild::Init(unsigned long, const char*, class MessageLoop*, class IPC::Channel*)

Kershaw, can you take a look?

Flags: needinfo?(kershaw)
Priority: -- → P2
Whiteboard: [necko-triaged]
Assignee: nobody → kershaw
Flags: needinfo?(kershaw)
Pushed by kjang@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/f627d416294f
Use the correct process type for socket process r=jld
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla71
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: