Bug 1579874 - Use the correct process type for socket process r=jld

Differential Revision: https://phabricator.services.mozilla.com/D45633